# mind-ray

./: .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  LICENSE  README.md
archive/cuda_reference/: build.bat  main.cu
bench/: README.md  build_bench.bat  build_cuda_reference.bat  build_cuda_reference.ps1  build_pbrt_gpu.ps1  contract_v2.md  cuda_benchmark.c  engines.json  generate_charts.py  generate_charts_bp.py  prereqs.md  results_template.md  run_bench.ps1  run_bench.sh  run_compare.ps1  run_scaling_sweep.ps1  run_three_engine_compare.ps1  run_tier_b.ps1  run_tier_bp.ps1  tier_b_harness.py  update_docs.py
bench/compare/: benchmark_contract.md  config.toml  generate_charts.py  render_report.py
bench/engines/optix/: CMakeLists.txt  build.ps1  optix_benchmark.cpp  optix_benchmark.cu  optix_benchmark.h
bench/results/: CHARTS.md  HEAD_TO_HEAD_NVIDIA_GeForce_RTX_4070_Laptop_GPU_2026-01-05.md  LATEST.md  LATEST_TIER_B.md  LATEST_TIER_BP.md  LATEST_TIER_B_RESULTS.json  RTX4070_Laptop_2026-01-05.md  SCALING_2026-01-05.md  SCALING_2026-01-06.md  TIER_BP_2026-01-05_23-47-41.md  TIER_BP_2026-01-06_00-06-14.md  TIER_B_2026-01-05_22-06-50.md  TIER_B_2026-01-05_22-37-35.md  TIER_B_2026-01-05_22-50-33.md  TIER_B_2026-01-05_22-52-11.md  TIER_B_2026-01-06_00-04-35.md  TIER_B_2026-01-06_13-48-06.md  cpu.txt  (+5 more)
docs/: DEMO_RUNBOOK.md  PITCH_ONE_SLIDE.md  architecture.md  benchmarks.md  runtime_integration.md  toolchain.md
native-cuda/: build.bat  build_opt.bat  build_opt.ps1  bvh.cuh  mindray_cuda.cu  mindray_cuda.exp  mindray_cuda_bvh.cu  mindray_cuda_bvh.exp  mindray_cuda_opt.cu  mindray_cuda_opt.exp
scripts/: benchmark.py  build.ps1  build.sh  build_and_run.ps1  build_and_run.sh  build_cuda.ps1  check_toolchain.ps1  check_toolchain.sh  get_mindc.ps1  get_mindc.sh  run.ps1  run.sh
src/: backend.mind  camera.mind  hittable.mind  io.mind  main.mind  material.mind  math_stubs.mind  ray.mind  render.mind  rng.mind  scene.mind  vec3.mind
(+393 files in other folders)
